# Project-Taskmaster-2.0

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml  taskmaster.db-shm  taskmaster.db-wal
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_scheduled_end_time.py  cfd733e88d0d_initial_task_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: router.py  tasks.py
backend/app/models/: __init__.py  task.py
backend/app/schemas/: task.py
backend/app/services/: task_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: tasks.ts
frontend/src/components/Calendar/: CalendarView.css  CalendarView.tsx
frontend/src/components/TaskItem/: TaskItem.css  TaskItem.tsx
frontend/src/components/TaskModal/: TaskModal.css  TaskModal.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/types/: task.ts
